--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "react-slick": "^0.29.0",
+        "redux-logger": "^3.0.6",
+        "redux-persist": "^6.0.0",
         "slick-carousel": "^1.8.1",
         "sweetalert2": "^11.4.14",
         "tailwindcss": "^3.0.24",
