--- a/package.json
+++ b/package.json
@@ -3,21 +3,32 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@date-io/date-fns": "^2.14.0",
         "@emotion/react": "^11.9.0",
         "@emotion/styled": "^11.8.1",
         "@material-tailwind/react": "^1.0.3",
         "@mui/icons-material": "^5.8.0",
         "@mui/material": "^5.7.0",
+        "@mui/x-date-pickers": "^5.0.0-alpha.7",
+        "@reach/combobox": "^0.17.0",
+        "@react-google-maps/api": "^2.12.0",
         "@reduxjs/toolkit": "^1.8.1",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.27.2",
         "buffer": "^6.0.3",
+        "flowbite-datepicker": "^1.2.1",
+        "moment": "^2.29.3",
         "react": "^18.1.0",
+        "react-datepicker": "^4.8.0",
         "react-dom": "^18.1.0",
         "react-file-base64": "^1.0.3",
+        "react-geocode": "^0.2.3",
+        "react-google-maps": "^9.4.5",
+        "react-hook-geolocation": "^1.0.11",
         "react-icons": "^4.3.1",
+        "react-places-autocomplete": "^7.3.0",
         "react-redux": "^8.0.1",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
@@ -27,6 +38,7 @@
         "slick-carousel": "^1.8.1",
         "sweetalert2": "^11.4.14",
         "tailwindcss": "^3.0.24",
+        "use-places-autocomplete": "^4.0.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
